<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_emoticon"
            android:title="@string/menu_meme" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite_red"
            android:title="@string/menu_favorited" />
    </group>

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_setings"
                android:icon="@drawable/settings"
                android:title="@string/action_settings" />
            <!--<item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_emoticon"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_emoticon"
                android:title="@string/menu_send" /> -->
        </menu>
    </item>

</menu>
