<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.memesbb21.ui.home.HomeFragment"
        android:label="@string/menu_meme"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fav"
        android:name="br.com.memesbb21.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorited"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_setings"
        android:name="br.com.memesbb21.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_favorite" />
</navigation>